--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,7 +4,16 @@
         <h2 class="title">HOW IT'S MADE?</h2>
         <div class="about_div">
             <div class="about-wrap">
-                <img src="./images/about_img1_desc1x.png" alt="Корова з молоком">
+                <picture>
+                    <source srcset="./images/about_img1_desc1x.png 1x, ./images/about_img1_desc1x.png 2x"
+                        media="(min-width: 1200px)">
+                    <source srcset="./images/about_img1_tab1x.png 1x, ./images/aabout_img1_tab2x.png 2x"
+                        media="(min-width: 390px)">
+                    <source srcset="./images/aabout_img1_mob1x.png 1x, ./images/aabout_img1_mob2x.png 2x"
+                        media="(min-width: 330px)">
+                    <source srcset="./images/about_img1_desc1x.png 1x, ./images/about_img1_desc1x.png 2x">
+                    <img src="./images/about_img1_desc1x.png" alt="cow" class="about_cow">
+                </picture>
             </div>
             <div class="foot_desc">
                 <p class="desc1">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
@@ -16,7 +25,8 @@
                         imperdiet placerat.
                         Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
                         tincidunt.
-                        Aliquam erat volutpat. Aenean accumsan <span id="dots">.</span> </p>
+                        <span class="desc-text">Aliquam erat volutpat. Aenean accumsan.</span><span id="dots"></span>
+                    </p>
                     <div class="desc3">
                         <p id="more">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Id sit esse minima voluptates. Eligendi, veniam quis veritatis harum incidunt similique
@@ -26,8 +36,9 @@
                         </p>
                     </div>
                 </div>
-                <button onclick="myFunction()" id="myBtn" class="button button--accent">
-                    Read More <svg width="8" height="7" class="button__icon">
+                <button onclick="myFunction()" id="myBtn" class="button">
+                    Read More
+                    <svg class="button__icon" width="8" height="10">
                         <use href="./images/icons.svg#icon-more"></use>
                     </svg>
                 </button>
