--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,18 +1,32 @@
 .about {
   background: $about-bg-color;
+  padding-top: 60px;
   padding-bottom: 40px;
+
+
+
+  @include maxBreakpoints (767.8px) {
+    background-image: url(../images/about_img2_mob1x.png);
+
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-y: 615px;
+
+  }
+
+  @include minBreakpoints ($desktop) {
+    background-image: url(../images/about_img2_desc1x.png);
+    background-position-x: center;
+    background-position-y: 145px;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
 }
+
 .about_div {
   @include minBreakpoints($tablet) {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-  }
-}
-.about-wrap {
-  @media screen and (max-width: 1199) {
-    padding-right: 121px;
-    padding-left: 99px;
   }
 }
 
@@ -23,25 +37,12 @@
   }
 }
 
-.about__container {
-  background: url(../images/about_img2_mob1x.png);
-
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position-y: 82%;
-
-  @media (min-width: 321px) and (max-width: 1279px) {
-    background: none;
-  }
-
-  @media (min-width: 1280px) {
-    background: url(../images/about_img2_desc1x.png);
-
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position-y: 100%;
+.about-wrap {
+  @include maxBreakpoints (767767.8px) {
+    margin-bottom: 40px;
   }
 }
+
 
 .label {
   font-family: $font-secondary;
@@ -50,15 +51,16 @@
   line-height: 1.16;
   text-transform: uppercase;
   color: $secondary-color;
-  padding-top: 60px;
   display: flex;
   text-align: center;
   flex-direction: column;
   align-items: center;
+
   @include tablet {
     font-size: 26px;
     line-height: 1.14;
   }
+
   @include desktop {
     font-size: 30px;
   }
@@ -74,11 +76,13 @@
   text-transform: uppercase;
   color: $primary-accent-color;
   margin: 15px 64px 32px 56px;
+
   @include tablet {
     margin-top: 16px;
     margin-bottom: 40px;
     font-style: 48px;
   }
+
   @include desktop {
     margin-bottom: 60px;
     font-size: 58px;
@@ -86,34 +90,20 @@
 }
 
 .desc1 {
-  font-family: $font-primary;
-  font-weight: 500;
   font-size: 12px;
   line-height: 1.62;
-
-  margin-bottom: 40px;
+  margin-bottom: 32px;
   color: $primary-text-color;
-  max-width: 220px;
 
   @include tablet {
-    font-family: $font-primary;
-    font-weight: 500;
     font-size: 14px;
     line-height: 176%;
-    /* or 25px */
-    max-width: 100%;
-    color: $primary-text-color;
   }
 
   @include desktop {
-    font-family: $font-primary;
-    font-weight: 500;
     font-size: 16px;
     line-height: 176%;
-    /* or 28px */
-
     letter-spacing: 0.04em;
-    max-width: 100%;
     color: $primary-text-color;
   }
 }
@@ -122,164 +112,71 @@
   display: none;
 }
 
-.about-wrap {
-  display: flex;
-  width: 100%;
-  @include tablet {
-    display: flex;
-    width: 200%;
-    margin-right: 80px;
-  }
-
-  @include desktop {
-    display: flex;
-    width: 150%;
-    margin-right: 80px;
-  }
-}
-
-// .img_milk {
-//   position: absolute;
-//   z-index: 3;
-//   top: -50px;
-//   left: 0;
-// }
-
 .desc2 {
-  font-family: $font-primary;
-  font-weight: 500;
   font-size: 12px;
   line-height: 1.62;
   color: $text-color;
-  position: relative;
-  max-width: 220px;
+  // position: relative;
   margin-bottom: 20px;
 
   @include tablet {
-    font-family: $font-primary;
-    font-weight: 500;
     font-size: 14px;
     line-height: 176%;
-    /* or 25px */
-    max-width: 100%;
     letter-spacing: 0.04em;
-
-    color: $text-color;
   }
 
   @include desktop {
-    font-family: $font-primary;
-    font-weight: 500;
-    font-size: 14px;
     line-height: 194%;
-    /* or 27px */
-    max-width: 100%;
-    letter-spacing: 0.04em;
-
-    color: $text-color;
   }
 }
 
 .desc3 {
-  font-family: $font-primary;
-  font-weight: 500;
   font-size: 12px;
   line-height: 162%;
   color: $text-color;
   position: relative;
-  max-width: 220px;
   margin-bottom: 20px;
 
   @include tablet {
-    font-family: $font-primary;
-    font-weight: 500;
     font-size: 14px;
     line-height: 176%;
-    /* or 25px */
-    max-width: 100%;
     letter-spacing: 0.04em;
 
     color: $text-color;
   }
 
   @include desktop {
-    font-family: $font-primary;
-    font-style: normal;
-    font-weight: 500;
     font-size: 14px;
     line-height: 194%;
-    /* or 27px */
-    max-width: 100%;
-    letter-spacing: 0.04em;
 
     color: $text-color;
   }
 }
 
-// .descbtn {
-//   background: $about-bg-color;
-//   border: none;
-//   border-radius: 22px;
-//   cursor: pointer;
-//   font-family: $font-primary;
-//   font-weight: 700;
-//   font-size: 14px;
-//   line-height: 18px;
-//   display: flex;
-//   align-items: baseline;
-//   text-align: center;
-//   color: $primary-accent-color;
-//   justify-content: center;
-//   margin-top: 20px;
-//   padding-bottom: 40px;
-// }
-
-// .descbtn > p {
-//   font-weight: 700;
-//   font-size: 14px;
-//   line-height: 18px;
-//   display: flex;
-//   align-items: baseline;
-//   text-align: center;
-//   justify-content: center;
-//   margin-right: 20px;
-//   align-items: baseline;
-// }
-
 .foot_desc {
+  font-size: 12px;
   text-align: left;
-  position: relative;
-  max-width: 320px;
+  // position: relative;
 
   @include tablet {
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 500;
+    max-width: 335px;
     font-size: 14px;
     line-height: 176%;
-    margin: auto;
-    max-width: 100%;
+    margin-left: 32px;
+    margin-top: 40px;
   }
 
   @include desktop {
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 500;
+    max-width: 465px;
+    margin-left: 99px;
+    margin-top: 60px;
     font-size: 16px;
-    line-height: 176%;
-    margin: auto;
-    letter-spacing: 0.04em;
-    position: relative;
-    max-width: 600px;
+    line-height: 194%;
+    letter-spacing: .04em;
   }
 }
 
-// .foot_desc::before {
-//   background-position: 50%;
-//   background-size: contain;
-//   position: absolute;
-//   width: 280px;
-//   min-height: 133px;
-//   content: '';
-//   top: 365px;
-// }
+.desc-text {
+  display: block;
+  padding-top: 27px;
+}
