--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -10,6 +10,7 @@
     $secondary-light-color 302px,
     $about-bg-color 0
   );
+  padding-bottom: 40px;
   @media screen and (min-width: 768px) {
     background: linear-gradient(
       to bottom,
@@ -22,6 +23,7 @@
         $secondary-light-color 100px,
         $about-bg-color 0
       );
+      padding-bottom: 121px;
     }
   }
 }
@@ -98,7 +100,9 @@
     display: none;
   }
 
-  .contacts__title-cafe:hover .contacts__img {
+  .contacts__title-cafe:hover .contacts__img,
+  .contacts__title-cafe:focus .contacts__img
+  {
     display: block;
     position: absolute;
     margin-right: -250px;
@@ -112,7 +116,9 @@
     }
   }
 
-  .contacts__title-foodtruck:hover .contacts__img {
+  .contacts__title-foodtruck:hover .contacts__img,
+  .contacts__title-foodtruck:focus .contacts__img
+  {
     display: block;
     position: absolute;
     margin-right: -250px;
@@ -214,7 +220,10 @@
   }
 
   .contacts__time-first:hover:after,
-  .contacts__time-second:hover:after {
+  .contacts__time-second:hover:after,
+  .contacts__time-first:focus:after,
+  .contacts__time-second:focus:after
+  {
     content: 'Opening hours can change on official holidays';
     position: sticky;
     width: max-content;
