--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -23,23 +23,23 @@
         <picture>
           <source
             srcset="
-              ./images/jug1x-d.png 1x,
-              ./images/jug2x-d.png 2x,
-              ./images/jug3x-d.png 3x,
-              ./images/jug4x-d.png 4x
+              ./images/hero__jug1x-d.png 1x,
+              ./images/hero__jug2x-d.png 2x
             "
             media="(min-width: 1200px)"
           />
           <source
             srcset="
-              ./images/jug1x-t.png 1x,
-              ./images/jug2x-t.png 2x,
-              ./images/jug3x-t.png 3x,
-              ./images/jug4x-t.png 4x
+              ./images/hero__jug1x-t.png 1x,
+              ./images/hero__jug2x-t.png 2x
             "
             media="(min-width: 768px)"
           />
-          <img src="./images/jug1x-t.png" alt="jug" class="hero__jug-img" />
+          <img
+            src="./images/hero__jug1x-t.png"
+            alt="jug"
+            class="hero__jug-img"
+          />
         </picture>
 
         <div class="hero__text-box">
@@ -77,23 +77,23 @@
       <picture>
         <source
           srcset="
-            ./images/girl1x-d.png 1x,
-            ./images/girl2x-d.png 2x,
-            ./images/girl3x-d.png 3x,
-            ./images/girl4x-d.png 4x
+            ./images/hero__girl1x-d.png 1x,
+            ./images/hero__girl2x-d.png 2x
           "
           media="(min-width: 1200px)"
         />
         <source
           srcset="
-            ./images/girl1x-t.png 1x,
-            ./images/girl2x-t.png 2x,
-            ./images/girl3x-t.png 3x,
-            ./images/girl4x-t.png 4x
+            ./images/hero__girl1x-t.png 1x,
+            ./images/hero__girl2x-t.png 2x
           "
           media="(min-width: 768px)"
         />
-        <img src="./images/girl1x-t.png" alt="girl" class="hero__girl-img" />
+        <img
+          src="./images/hero__girl1x-t.png"
+          alt="girl"
+          class="hero__girl-img"
+        />
       </picture>
     </div>
 
@@ -104,32 +104,26 @@
             <picture>
               <source
                 srcset="
-                  ./images/icecream1x-d.png 1x,
-                  ./images/icecream2x-d.png 2x,
-                  ./images/icecream3x-d.png 3x,
-                  ./images/icecream4x-d.png 4x
+                  ./images/hero__icecream1x-d.png 1x,
+                  ./images/hero__icecream2x-d.png 2x
                 "
                 media="(min-width: 1200px)"
               />
               <source
                 srcset="
-                  ./images/icecream1x-t.png 1x,
-                  ./images/icecream2x-t.png 2x,
-                  ./images/icecream3x-t.png 3x,
-                  ./images/icecream4x-t.png 4x
+                  ./images/hero__icecream1x-t.png 1x,
+                  ./images/hero__icecream2x-t.png 2x
                 "
                 media="(min-width: 768px)"
               />
               <source
                 srcset="
-                  ./images/icecream1x-m.png 1x,
-                  ./images/icecream2x-m.png 2x,
-                  ./images/icecream3x-m.png 3x,
-                  ./images/icecream4x-m.png 4x
+                  ./images/hero__icecream1x-m.png 1x,
+                  ./images/hero__icecream2x-m.png 2x
                 "
                 media="(min-width: 320px)"
               />
-              <img src="./images/icecream1x-m.png" alt="Ice cream" />
+              <img src="./images/hero__icecream1x-m.png" alt="Ice cream" />
             </picture>
           </div>
         </div>
