--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -48,12 +48,12 @@
             dessert. It made from milk and is flavoured with a sweetener, cocoa
             or vanilla, strawberries or peaches.
           </p>
-          <iframe
+          <!-- <iframe
             src="https://giphy.com/embed/GB91uLrgyuul2"
             style="border: 0"
             class="hero__giphy"
           >
-          </iframe>
+          </iframe> -->
           <button type="button" class="hero__more-btn"></button>
           <div class="hero__more-btn__text">
             You can see it on the descktop pc only ;)
