--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -45,18 +45,20 @@
         <div class="hero__text-box">
           <p class="hero__text is-show">
             Ice cream is a sweetened frozen food typically eaten as a snack or
-            dessert. It made from milk and is flavoured with a sweetener, cocoa
-            or vanilla, strawberries or peaches.
+            dessert.
           </p>
-          <!-- <iframe
-            src="https://giphy.com/embed/GB91uLrgyuul2"
-            style="border: 0"
-            class="hero__giphy"
-          >
-          </iframe> -->
-          <button type="button" class="hero__more-btn"></button>
-          <div class="hero__more-btn__text">
-            You can see it on the descktop pc only ;)
+          <button type="button" class="button button--circle hero__more-btn">
+            <svg class="button__icon" width="12" height="12">
+              <use href="./images/icons.svg#arrow"></use>
+            </svg>
+          </button>
+          <div class="hero__more-text">
+            It may be made from milk or cream , either sugar or an alternative,
+            and a spice, such as cocoa or vanilla, or with fruit such as
+            strawberries or peaches. It can also be made by whisking a flavored
+            cream base and liquid nitrogen together. The mixture is cooled below
+            the freezing point of water and stirred to incorporate air spaces
+            and to prevent detectable ice crystals from forming.
           </div>
         </div>
       </div>
