--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -172,6 +172,7 @@ $hero-height-desktop: 665px;
   min-height: $hero-height-mobile;
   padding-top: $hero-top-mobile;
   overflow-x: clip;
+  width: 100%;
 
   @include tablet {
     min-height: $hero-height-tablet;
@@ -183,7 +184,7 @@ $hero-height-desktop: 665px;
   }
 }
 .container-bg {
-  width: calc(100vw - 20px);
+  width: 100%;
   padding-left: 36px;
   @include tablet {
     padding-left: 65px;
@@ -215,8 +216,8 @@ $hero-height-desktop: 665px;
 
 .hero__icecream-img {
   transform: translate(22%, 10%);
-  // transition: transform $animation;
-  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform $animation;
+  // transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero__jug-img {
